# stellar-emulator

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
notebook/: apogee-dr17.ipynb  central_hydrogen_problem_tracks.txt  inference-hierarchical.ipynb  inference-pymc.ipynb  inference-synth-hmcecs.ipynb  inference-synth.ipynb  inference-test.ipynb  photometry.ipynb  testing.ipynb  tf-model-to-jax.ipynb  train-test-split.ipynb  truths.csv  tuning.ipynb  yaguangli2023-dataset.ipynb  yaguangli2023.ipynb
scripts/: train.py  yaguangli2023_grid.py
src/eggman/: distributions.py  emulator.py
src/eggman/emulator/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/eggman/emulator/variables/: variables.data-00000-of-00001  variables.index
src/eggman/grid/: __init__.py  defaults.py  eep.py  star.py
src/eggman/infer/: __init__.py  models.py
