[build-system]
requires = ["setuptools"]  # the build tool to use
build-backend = "setuptools.build_meta"  # the function to use to build the package

[project]
name = "eggman"
version = "0.0.1"
dependencies = ["numpy", "astropy", "scipy", "pandas", "matplotlib", "jaxlib", "jax", "tensorflow"]
requires-python = ">=3.7"
